# spm

./: Cargo.toml  key.txt
.github/workflows/: rust.yml
src/: main.rs
src/encdfun/: decfuns.rs  encfuns.rs  inits.rs  mod.rs  verifypass.rs
